# lab7

./: CMakeLists.txt
include/: Druid.h  Game.h  NPC.h  NPC_Factory.h  Observer.h  Squirrel.h  Visitor.h  Werewolf.h
src/: Druid.cpp  Game.cpp  NPC_Factory.cpp  Observer.cpp  Squirrel.cpp  Werewolf.cpp  main.cpp
test/: tests.cpp
